oragranised html folder and scripts folder

--- a/html/parks.html
+++ b/html/parks.html
@@ -17,6 +17,7 @@
       <option name="nationalParks" id="nationalParks"></option>
     </select>
     <button id="btn3">Search</button>
+    <p id="displayState"></p>
 
         <!-- ParkType dropdown -->
   <h3>Search By Park Type</h3>
@@ -24,13 +25,14 @@
     <option name="locationName" id="locationName"></option>
   </select>
   <button id="btn4">Search</button>
+
  
 
 
-    
+     <!--------------- scripts-------------- -->
     <script src="parkType.js"></script>
     <script src="scripts/parkTypeData.js"></script>
-   <script src="scripts/locationData.js"></script>
+    <script src="scripts/locationData.js"></script>
     <script src="parks.js"></script>
    
    
