--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
    
     <button id="btn1">Explore Mountains!</button>
     <button id="btn2">Explore National Parks!</button>
+
+
     
 
 
-    <script src="scripts/home.js"></script>
+    <script src="/scripts/parks.js"></script>
+    <script src="/scripts/parkType.js"></script>
 </body>
 </html>
