add search by park type feature in parks.js

--- a/html/mountain.html
+++ b/html/mountain.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <h1>Mountains</h1>
+
+
+
+
+    <!------------------------ scripts------------------------ -->
+    <script src="/scripts/mountainData.js"></script>
     
 </body>
 </html>
