add table in parks.html and display array feature in parks.js

--- a/html/mountain.html
+++ b/html/mountain.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountains</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="scripts/home.js"></script>
 </head>
 <body>
     <h1>Mountains</h1>
-
+    <select name="mountainName" id="mountainName">
+        <option name="mountain" id="mountain"></option>
+      </select>
+      <button id="btn5">Search</button>
 
 
 
     <!------------------------ scripts------------------------ -->
     <script src="/scripts/mountainData.js"></script>
-    
+    <script src="/scripts/mountain.js"></script>
 </body>
 </html>
