--- a/html/parks.html
+++ b/html/parks.html
@@ -27,9 +27,27 @@
   <button id="btn4">Search</button>
 
 
+  <table id="table" border="1">
+    <thead>
+        <th>LocationID</th>
+        <th>LocationName</th>
+        <th>Address</th>
+        <th>City</th>
+        <th>State</th>
+        <th>ZipCode</th>
+        <th>Phone</th>
+        <th>Fax</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>coordinates</th>
+        <th>type</th>
+    </thead>
+    <tbody id="tableBody">
 
+    </tbody>
+</table>
 
-
+ 
 
 
 
