--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enjoy the Outdoors</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
   
 
     
@@ -16,6 +16,11 @@
     <button id="btn1">Explore Mountains!</button>
     <button id="btn2">Explore National Parks!</button>
 
+
+
+   
+
+   
 
     
 
