add mountain dropdown and display national park  array in browser

--- a/html/parks.html
+++ b/html/parks.html
@@ -26,6 +26,17 @@
   </select>
   <button id="btn4">Search</button>
 
+   <!-- View all national Parks -->
+   <!-- <h3>View all National Parks</h3>
+   <select name="allParks" id="allParks">
+     <option name="getAll" id="getAll"></option>
+   </select>
+   <button id="btn4">Search</button> -->
+
+
+
+
+
 
   <table id="table" border="1">
     <thead>
