strech goal for API ,add image in mountain.js

--- a/html/contact.html
+++ b/html/contact.html
@@ -14,10 +14,10 @@
         <nav>
           <ul>
               <li><a href="/enjoy-the-outdoors/index.html">Home</a></li>
-              <li><a href="html/parks.html">Explore National Parks</a></li>
-              <li><a href="html/mountain.html">Explore Mountains</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="/enjoy-the-outdoors/html/parks.html">Explore National Parks</a></li>
+              <li><a href="/enjoy-the-outdoors/html/mountain.html">Explore Mountains</a></li>
+              <li><a href="/enjoy-the-outdoors/html/about.html">About</a></li>
+              <li><a href="/enjoy-the-outdoors/html/contact.html">Contact</a></li>
             </ul>
          
       </nav>
