--- a/html/mountain.html
+++ b/html/mountain.html
@@ -31,10 +31,11 @@
       </nav>
     </header>
     <main>
+      <br>
       <select name="mountainName" id="mountainName">
         <option name="mountain" id="mountain"></option>
       </select>
-      <button id="btn5">Get Details</button>
+      <button class="button" id="btn5">Get Details</button>
 
       <table id="table" border="1" align="center" width="700">
         <thead>
@@ -45,6 +46,9 @@
           <th>Latitude</th>
           <th>Longitude</th>
           <th>Image</th>
+          <th>Sunrise(UTC) </th>
+          <th>Sunset(UTC)</th>
+
         </thead>
         <tbody id="tableBody"></tbody>
       </table>
