--- a/html/parks.html
+++ b/html/parks.html
@@ -37,7 +37,7 @@
       <select name="location" id="locationList">
         <option name="nationalParks" id="nationalParks"></option>
       </select>
-      <button id="btn3">Get Details</button>
+      <button class="button" id="btn3">Get Details</button>
       <p id="displayState"></p>
 
       <!-- ParkType dropdown -->
@@ -45,7 +45,7 @@
       <select name="parksTypes" id="parksTypesList">
         <option name="locationName" id="locationName"></option>
       </select>
-      <button id="btn4">Get Details</button>
+      <button class="button" id="btn4">Get Details</button>
 
       <!-- View all national Parks -->
       <!-- <h3>View all National Parks</h3>
